--- a/Faruk_Erata_CV.html
+++ b/Faruk_Erata_CV.html
@@ -309,7 +309,7 @@
             <div class="section">
                 <h3 class="left-section-title">YABANCI DİLLER</h3>
                 <ul class="skill-list">
-                    <li>İngilizce - İleri Seviye</li>
+                    <li>İngilizce - Orta Seviye</li>
                 </ul>
             </div>
         </div>
@@ -328,7 +328,7 @@
                     HAKKIMDA
                 </h2>
                 <p class="hakkimda-description">
-                    Sakarya Üniversitesi Bilişim Sistemleri Mühendisliği mezunu. Java, Python, SQL, Troia dillerinde ileri düzeyde deneyim. Flask API geliştirme ve kurumsal ERP sistemleri konusunda pratik deneyim.
+                    Sakarya Üniversitesi Bilişim Sistemleri Mühendisliği mezunuyum. Java, Python, SQL, Troia dillerinde ileri düzeyde deneyim, Flask API geliştirme ve kurumsal ERP sistemleri konusunda pratik deneyim sahibiyim.
                 </p>
             </div>
 
@@ -341,7 +341,7 @@
                 </h2>
                 
                 <div class="experience-item">
-                    <h3 class="job-title">Yazılım Geliştirici</h3>
+                    <h3 class="job-title">Yazılım Geliştirici - ERP Danışmanı</h3>
                     <p class="company">AINOS Yazılım - ERP Sistemleri</p>
                     <p class="date">2024 - Devam Ediyor</p>
                     <div class="description">
@@ -376,6 +376,7 @@
                             <li>Web tabanlı uygulama geliştirme</li>
                             <li>API entegrasyonları</li>
                             <li>Kod dokümantasyonu ve versiyon kontrolü</li>
+                            <li>Java ile Spring Boot projeleri</li>
                         </ul>
                     </div>
                 </div>
