--- a/Faruk_Erata_CV.html
+++ b/Faruk_Erata_CV.html
@@ -309,7 +309,7 @@
             <div class="section">
                 <h3 class="left-section-title">YABANCI DİLLER</h3>
                 <ul class="skill-list">
-                    <li>İngilizce - Orta Seviye</li>
+                    <li>İngilizce - Profesyonel Yetkinlik</li>
                 </ul>
             </div>
         </div>
@@ -440,3 +440,4 @@
     </script>
 </body>
 </html>
+
